<resources>
    <string name="app_name">MyShoppingList</string>
    <string name="login_hint">Enter your Username</string>
    <string name="login_button">Login as Customer</string>
    <string name="login_admin_button">Login as Admin</string>
    <string name="signup_link">No account yet? Create one</string>
    <string name="signup_name">Full Name</string>
    <string name="signup_username">Username</string>
    <string name="signup_button">Create Account</string>
    <string name="login_link">Already a member? Login</string>
    <string name="admin_hint">Password</string>
    <string name="navigation_customer">Customer Login</string>
    <string name="navigation_admin">Admin Login</string>

    <string name="app_open_msg">Please wait while we connect you&#8230;</string>


    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_list_product">List Products</string>
    <string name="menu_enter_product">Enter Product</string>
    <string name="menu_enter_coupon">Enter Coupon</string>
    <string name="menu_list_coupon">List Coupons</string>
    <string name="menu_largest_discount">Largest Discount</string>
    <string name="menu_best_discount">Best Discount</string>
    <string name="reset">Reset System</string>


    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_button">Enter Product</string>

    <string name="dashboard_name">Product Name</string>
    <string name="dashboard_price">Price</string>
    <string name="dashboard_check">Check</string>
    <string name="dashboard_btn">Update Price</string>

    <string name="coupon_discount">Discount</string>
    <string name="coupon_products">Product List: </string>
    <string name="coupon_button">Enter Coupon</string>

    <string name="list_coupon_Number">Coupon Number</string>
    <string name="list_coupon_action">Action</string>


    <string name="list_coupon_by_id_ID">ID</string>

    <string name="view_coupon_id">Coupon Id: </string>
    <string name="view_coupon_discount">Discount: </string>
    <string name="view_list_products">List of Products: </string>
    <string name="view_coupon_button">Delete Coupon</string>


    <string name="largest_discount_budget">Enter your budget</string>
    <string name="largest_discount_button">Get Discount List</string>
    <string name="largest_list">List of Products:</string>
    <string name="best_discount_button">Get Best Discount</string>
</resources>
