<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/nav_dashboard"
        android:title="@string/menu_dashboard"
        app:showAsAction="never"
        android:orderInCategory="1"/>

    <item android:id="@+id/nav_enterProduct"
        android:title="@string/menu_enter_product"
        app:showAsAction="never"
        android:orderInCategory="2"/>

    <item android:id="@+id/nav_enterCoupon"
        android:title="@string/menu_enter_coupon"
        app:showAsAction="never"
        android:orderInCategory="3"/>

    <item android:id="@+id/nav_listCoupon"
        android:title="@string/menu_list_coupon"
        app:showAsAction="never"
        android:orderInCategory="4"/>

    <item android:id="@+id/nav_logout"
        android:title="@string/logout"
        app:showAsAction="never"
        android:orderInCategory="100"/>
</menu>





