<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.example.subik.myshoppinglist.ViewCouponActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/view_coupon_id"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textViewCouponId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/view_coupon_discount"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:id="@+id/textViewDiscount"
            android:textSize="20sp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/view_list_products"
        android:paddingTop="10dp"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:weightSum="9">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/list_coupon_by_id_ID"/>
        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_name"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_weight="5"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/etPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/dashboard_price"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="3"/>

    </LinearLayout>


    <ListView
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/listViewCoupon"
        android:layout_weight="10"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_coupon_button"
        android:onClick="deleteCoupon"/>
</LinearLayout>
