<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context="com.example.subik.myshoppinglist.EnterCouponActivity">


    <!--  Discount Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText android:id="@+id/textDiscount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/coupon_discount" />
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coupon_products"
        android:padding="5dp"
        android:textStyle="bold"/>
    <ListView
        android:id="@+id/listProducts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"/>


    <Button
        android:id="@+id/buttonCoupon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coupon_button"
        android:onClick="enterCoupon"/>



</LinearLayout>